force-app/main/default/objects/custom_create66__c/custom_create66__c.object-meta.xml
<CustomObject>
    <label>Custom created object66</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects66</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>