force-app/main/default/objects/custom_create66__c/fields/custom_create_66field573__c.field-meta.xml
<CustomField>
    <fullName>custom_create_66field573__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 66field573</label>
    <type>Checkbox</type>
</CustomField>